--- a/complete/package.json
+++ b/complete/package.json
@@ -16,9 +16,9 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
-    "@mui/material-nextjs": "^5.15.11",
+    "@mui/material-nextjs": "^7.1.1",
     "axios": "^1.7.2",
-    "next": "14.2.4",
+    "next": "^15.3.4",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -26,7 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "prettier": "^3.3.2"
+    "prettier": "^3.3.2",
+    "typescript": "^5"
   }
 }
